Add comments for all classifier, Wrapped scalatest into Future