@@ -11,7 +11,13 @@
  */
 package org.scalaml.app
 
+import scala.annotation.switch
+import scala.util.Properties
+
+import org.scalatest.concurrent._
+import org.scalatest.time.{Span, Seconds, Millis}
 import org.apache.log4j.Logger
+
 import org.scalaml.app.core._
 import org.scalaml.app.chap1._
 import org.scalaml.app.chap2._
@@ -27,6 +33,7 @@ import org.scalaml.app.chap11._
 import org.scalaml.app.chap12._
 import org.scalaml.util.DisplayUtils
 
+
 		/**
 		 * <p>Singleton that executes all the test clases in Scala for Machine Learning.<br>
 		 * The tests are triggered from the Simple Build Tool (SBT) and Scalatest using the
@@ -36,6 +43,10 @@ import org.scalaml.util.DisplayUtils
 		 */
 protected object AllTests extends ScalaMlTest {
 	val chapter: String = "All tests"
+	  
+	private val CONFIGURATION = "Recommended SBT/JVM configuration:\n-Xmx4096 (or higher)\n" +
+			" -XX:MaxPermSize=512m (or higher)\n -XX:ReservedCodeCacheSize=256m (or higher)\n" +
+			s"Context:\nUser:${Properties.userName}, OS:${Properties.osName}"
 
 	private val logger = Logger.getLogger("AllTests")
 	
@@ -43,140 +54,126 @@ protected object AllTests extends ScalaMlTest {
 		 * Method to execute all the tests in Scala for Machine Learning
 		 * Following the order of the chapters.
 		 */
-	def test: Unit = {
+	def run: Unit = {
+		header
 			// Core
-		run(StatsEval)
-		run(XTSeriesEval)
-		run(MatrixEval)
+		evaluate(StatsEval)
 		
+		evaluate(XTSeriesEval)
+		evaluate(MatrixEval)
+
 			// Chapter 1
-		run(LogBinRegressionEval)
-		run(PlotterEval)
+		evaluate(LogBinRegressionEval)
+		evaluate(PlotterEval)
 		
 			// Chapter 2
-		run(BiasVarianceEval)
-		run(WorkflowEval)
+		evaluate(BiasVarianceEval)
+		evaluate(WorkflowEval)
 		
 			//Chapter 3
-		run(MovingAveragesEval, Array[String]("BAC", "60")) 
-		
-		run(DFTEval)
-		run(DFTEval, Array[String]("BAC"))
-		run(DKalmanEval, Array[String]("BAC"))
+		evaluate(MovingAveragesEval, Array[String]("BAC", "60")) 
+		evaluate(DFTEval)
+		evaluate(DFTEval, Array[String]("BAC"))
+		evaluate(DKalmanEval, Array[String]("BAC"))
 
 
 			// Chapter 4
 		val input = Array[String]("2", "3", "4", "7", "9", "10", "13", "15")
-		run(KMeansEval, input)
-		run(EMEval, Array[String]("2", "40"))
-		run(EMEval, Array[String]("3", "25"))
-		run(EMEval, Array[String]("4", "15"))
-		run(PCAEval)
+		evaluate(KMeansEval, input)
+		evaluate(EMEval, Array[String]("2", "40"))
+		evaluate(EMEval, Array[String]("3", "25"))
+		evaluate(EMEval, Array[String]("4", "15"))
+		
+		evaluate(PCAEval)
 
 			// Chapter 5
 		val TRAIN_VALIDATION_RATIO = "0.8"
-		run(BinomialBayesEval, Array[String]("IBM", TRAIN_VALIDATION_RATIO, "8"))
-		run(BinomialBayesEval, Array[String]("NEM", TRAIN_VALIDATION_RATIO, "4"))
-		run(BinomialBayesEval, Array[String]("NEM", TRAIN_VALIDATION_RATIO, "12"))
-		run(BinomialBayesEval, Array[String]("NEM", TRAIN_VALIDATION_RATIO, "36"))
-		run(BinomialBayesEval, Array[String]("GE", TRAIN_VALIDATION_RATIO, "4"))
-		run(BinomialBayesEval, Array[String]("GE", TRAIN_VALIDATION_RATIO, "12"))
-		run(BinomialBayesEval, Array[String]("GE", TRAIN_VALIDATION_RATIO, "36"))
-		run(BinomialBayesEval, Array[String]("BAC", TRAIN_VALIDATION_RATIO, "4"))
-		run(BinomialBayesEval, Array[String]("BAC", TRAIN_VALIDATION_RATIO, "12"))
-		run(BinomialBayesEval, Array[String]("BAC", TRAIN_VALIDATION_RATIO, "36"))
-		run(TextBayesEval)
+		evaluate(BinomialBayesEval, Array[String]("IBM", TRAIN_VALIDATION_RATIO, "8"))
+		evaluate(BinomialBayesEval, Array[String]("NEM", TRAIN_VALIDATION_RATIO, "4"))
+		evaluate(BinomialBayesEval, Array[String]("NEM", TRAIN_VALIDATION_RATIO, "12"))
+		evaluate(BinomialBayesEval, Array[String]("NEM", TRAIN_VALIDATION_RATIO, "36"))
+		evaluate(BinomialBayesEval, Array[String]("GE", TRAIN_VALIDATION_RATIO, "4"))
+		evaluate(BinomialBayesEval, Array[String]("GE", TRAIN_VALIDATION_RATIO, "12"))
+		evaluate(BinomialBayesEval, Array[String]("GE", TRAIN_VALIDATION_RATIO, "36"))
+		evaluate(BinomialBayesEval, Array[String]("BAC", TRAIN_VALIDATION_RATIO, "4"))
+		evaluate(BinomialBayesEval, Array[String]("BAC", TRAIN_VALIDATION_RATIO, "12"))
+		evaluate(BinomialBayesEval, Array[String]("BAC", TRAIN_VALIDATION_RATIO, "36"))
+		evaluate(TextBayesEval)
 	
-		run(FunctionClassificationEval)
+		evaluate(FunctionClassificationEval)
 		
 			// Chapter 6
-		run(SingleLinearRegressionEval)
-		run(RidgeRegressionEval)
-		run(MultiLinearRegressionEval, Array[String]("trend"))
-		run(MultiLinearRegressionEval, Array[String]("filter"))
+		evaluate(SingleLinearRegressionEval)
+		evaluate(RidgeRegressionEval)
+		evaluate(MultiLinearRegressionEval, Array[String]("trend"))
+		evaluate(MultiLinearRegressionEval, Array[String]("filter"))
 
-		run(LogisticRegressionEval)
+		evaluate(LogisticRegressionEval)
 
 			// Chapter 7
-		run(HMMEval, Array[String]("evaluation"))
-		run(HMMEval, Array[String]("training"))
-		run(CrfEval)
+		evaluate(HMMEval, Array[String]("evaluation"))
+		evaluate(HMMEval, Array[String]("training"))
+		evaluate(CrfEval)
 		
 			// Chapter 8
-		run(SVCKernelEval)
-		run(SVCMarginEval)
-		run(SVCEval)
-		run(SVCOutliersEval)
-		run(SVREval)	
+		evaluate(SVCKernelEval)
+		evaluate(SVCMarginEval)
+		evaluate(SVCEval)
+		evaluate(SVCOutliersEval)
+		evaluate(SVREval)	
 		
 			// Chapter 9
-	  run(MLPConfigEval, Array[String]("eta"))
-		run(MLPConfigEval, Array[String]("alpha"))
-		run(MLPValidation)
-		run(BinaryMLPEval)
-		run(MLPEval)
+	  evaluate(MLPConfigEval, Array[String]("eta"))
+		evaluate(MLPConfigEval, Array[String]("alpha"))
+		evaluate(MLPValidation)
+		evaluate(BinaryMLPEval)
+		evaluate(MLPEval)
 		
 			// Chapter 10
-		run(GAEval)
+		evaluate(GAEval)
 		
 			// Chapter 11
-		run(QLearningEval)
+		evaluate(QLearningEval)
 		
 			// Chapter 12
-		run(ParBenchmarkEval, Array[String]("array"))
-		run(ParBenchmarkEval, Array[String]("map"))
-		run(ActorsManagerEval, Array[String]("norouter"))
-		run(ActorsManagerEval, Array[String]("router"))
-		run(TransformFuturesEval)
-		run(SparkKMeansEval)
+		evaluate(ParBenchmarkEval, Array[String]("array"))
+		evaluate(ParBenchmarkEval, Array[String]("map"))
+		evaluate(ActorsManagerEval, Array[String]("norouter"))
+		evaluate(ActorsManagerEval, Array[String]("router"))
+		evaluate(TransformFuturesEval)
+		evaluate(SparkKMeansEval)
 	}
-	
-	
-			/**
-			 * Wrapper or helper method to execute the 
-			 */
-	private def run(eval: Eval, args: Array[String] = Array.empty): Unit = {
-		import akka.actor.{ActorSystem, Actor, Props, ActorRef}
-		import scala.util.{Try, Success, Failure}
 		
-		var completed = false
-	  		
-			// Anonymous Akka actor that wraps the execution of the scala test.
-		val worker = TestContext.actorSystem.actorOf(Props(new Actor {
-			def receive = { 
-					// Launch the execution of a test within 
-					// the event handler of the worker actor.
-				case msg: String => {
-					completed = evaluate(eval, args)
-					context.stop(self)
-				}
-				case _ => { } // Ignore
-			}
-		}))
-		var errorMsg = "failed"
+		/**
+		 * Method to validate the version of Scala and Java JDK used.
+		 */
+	private def header: Unit = {
+		DisplayUtils.show(CONFIGURATION, logger)
+		if( !Properties.isWin && !Properties.isMac)
+			DisplayUtils.show("The library has not be tested for this Operating System", logger)
+			
+		DisplayUtils.show(s"Java version: ${Properties.javaVersion}", logger)
+		if(!Properties.isJavaAtLeast("1.7"))
+			DisplayUtils.show("Incompatible version of Java, should be 1.7 or later", logger)
+			
+		val scalaVersion = Properties.versionNumberString
 		
-			// The main thread blocks until either the maxExecutionTime is reached
-			// of the computation status has been updated...
-		Try {
-			worker ! "Start"
-			val startTime = System.currentTimeMillis
-			while( !completed ) {
-				Thread.sleep(200)
-				
-				// Exit if time out 'maxExecutionTime" is exceeded
-				if(System.currentTimeMillis - startTime > eval.maxExecutionTime) {
-					completed = true
-					errorMsg = s"time out after $eval.maxExecutionTime msecs."
+		DisplayUtils.show(s"Scala version: $scalaVersion", logger)
+		(scalaVersion.charAt(2): @switch) match {
+			case '9' => DisplayUtils.show("Scala version should be 2.10.2 or higher", logger)
+			case '1' => {
+				(scalaVersion.charAt(3): @switch) match {
+					case '0' => DisplayUtils.show("Compatible Akka version should be 2.2.4 or lower", logger)
+					case '1' => DisplayUtils.show("Compatible Akka version should be 2.3.4 or higher", logger)
 				}
 			}
-			DisplayUtils.show(s"End ${eval.name}", logger)
-			completed
-		} 
-	  	match {
-			case Success(n) => { } // No message needed
-			case Failure(e) => DisplayUtils.error(s"$chapter failed ", logger, e)
+			case _ => DisplayUtils.show("Could not initialize", logger)
 		}
+		count = 0
 	}
+	
+	var count: Int = _	
+	def testCount: String = { count += 1;  String.valueOf(count) }
 }
 
 
@@ -184,12 +181,7 @@ protected object AllTests extends ScalaMlTest {
 		 * <p>Driver called by simple build tool (SBT) as test:run
 		 * @author Patrick Nicolas
 		 */
-object AllTestsApp extends App  {
-	TestContext.init
-	AllTests.test
-	TestContext.shutdownAll
-	println("end")
-}
+object AllTestsApp extends App { AllTests.run }
 
 
 // ------------------------------------  EOF ----------------------------------------------------
